# singleCellHaystack-py

./: .buildinfo  .gitignore  LICENSE  MANIFEST.in  README.md  api.html  articles.html  genindex.html  hoca.html  index.html  objects.inv  pbmc3k.html  pyproject.toml  reference.html  releases.html  requirements.txt  requitements.txt  search.html  searchindex.js  setup.cfg  spatial.html  test_pbmc3k.html  test_toy.html  toy.html  trajectory.html  tutorials.html
.doctrees/: api.doctree  articles.doctree  environment.pickle  hoca.doctree  index.doctree  pbmc3k.doctree  reference.doctree  releases.doctree  spatial.doctree  test_pbmc3k.doctree  test_toy.doctree  toy.doctree  trajectory.doctree  tutorials.doctree
.doctrees/articles/: hoca.doctree  pbmc3k.doctree  spatial.doctree  toy.doctree  trajectory.doctree
.doctrees/releases/: 0.0.5.doctree
_sources/: articles.rst  articles.rst.txt  hoca.rst  index.md  index.md.txt  pbmc3k.rst  reference.rst  releases.rst  toy.rst  trajectory.rst
articles/: hoca.html  pbmc3k.html  pbmc3k.ipynb  spatial.html  spatial.ipynb  toy.html  toy.ipynb  trajectory.html  trajectory.ipynb
datasets/: toy.h5ad
docs/: api.html  api.rst  articles.rst  build.sh  conf.py  index.md  pbmc3k.rst  requirements.txt  search.html  spatial.rst  test_pbmc3k.html  toy.html  tutorials.html  tutorials.rst  usage.rst
releases/: 0.0.5.html
singleCellHaystack/: __init__.py  _cluster.py  _data.py  _grid.py  _haystack.py  _kld.py  _plot.py  _pvalue.py  _randomization.py  _tools.py
tests/: singleCellHaystack  test_cluster.ipynb  test_cluster.py  test_grid_points.ipynb  test_load_toy.py  test_sp.py  test_sparse_means.ipynb  test_toy-genes_to_rand.tsv  test_toy-grid_coord.tsv  test_toy-results.tsv  test_toy.ipynb  test_toy.py  test_toy_grid.coord.tsv  test_toy_results.tsv  test_toy_results_fixed_coord.tsv  tests.ipynb
tutorials/: hoca.html  hoca.ipynb  pbmc3k.html  spatial.html  toy.html  trajectory.html
(+73 files in other folders)
